# sagemaker-pipelines-abstraction

./: .gitignore  Dockerfile  Makefile  TODO.md  pyproject.toml  readme.md
.github/workflows/: python-examples.yml  python-package.yml  python.yml
design_decisions/: config_factory.ipynb  facade_pattern.ipynb  generic_step_factory.ipynb  generics_plus_factory_method_pattern.ipynb  properties_for_stepconfig_facade.ipynb  property_vs_attribute.md  simple_stepfactory.ipynb  step_config.ipynb  step_factory_interface.ipynb  typing_sagemaker_sdk.ipynb  why_factories.ipynb
design_decisions/_old/: customizing_frameworkprocessor.py  facade_pattern.ipynb  pipeline_wrapper.ipynb  simple_factory_loading_configs_together.ipynb
design_decisions/alternative_designs_considered/: generics_plus_factory_method_pattern.ipynb
design_decisions/configs/: fileformat_and_organization.ipynb  json_vs_dotenv_format.ipynb
examples/: Dockerfile  Makefile  pyproject.toml  run_pipeline.ipynb
examples/config/dev/: preprocessing.yaml  shared_config.yaml
examples/config/local/: preprocessing.yaml  shared_config.yaml
examples/src/smp_oo_examples/: data_setup.ipynb  run_pipeline.ipynb  run_processor.ipynb  run_processor_locally.ipynb  validation.py
examples/src/smp_oo_examples/worker_code/preprocess/: preprocess.py  requirements.txt  validation.py
examples/terraform/: .gitignore  .terraform.lock.hcl  iam.tf  s3.tf  sagemaker_pipeline.tf  terraform.tfvars  variables.tf
examples/tests/: validation_wrapper_test.py
sm_pipelines_oo/: main.py  pipeline_config.py  pipeline_wrapper.py  setup_example_input.py  shared_config_schema.py  utils.py
sm_pipelines_oo/configs/dev/: .env_pre_process  .env_shared
sm_pipelines_oo/configs/local/: .env_shared
sm_pipelines_oo/connector/: implementation.py  interface.py
sm_pipelines_oo/steps/: pipeline_config.py  pre_processing.py
src/sm_pipelines_oo/: main.py  pipeline.py  pipeline_wrapper.py  setup_example_input.py  shared_config_schema.py  utils.py
src/sm_pipelines_oo/_old/: path_factory.py  setup_example_input.py
src/sm_pipelines_oo/aws_connector/: base_connector.py  concrete_connectors.py  implementation.py  interface.py
src/sm_pipelines_oo/code/: preprocess.py
src/sm_pipelines_oo/config_loader/: abstraction.py  implementations.py  interface.py
src/sm_pipelines_oo/config_loader/implementations/: file_loaders.py  mock_config_loader.py
src/sm_pipelines_oo/configs/dev/: .env_pre_process  .env_shared
src/sm_pipelines_oo/configs/local/: .env_pre_process  .env_shared
src/sm_pipelines_oo/connector/: implementation.py  interface.py
src/sm_pipelines_oo/steps/: framework_processing_step.py  interfaces.py  pre_processing.py  processing.py  step_factory_facade.py  step_utils.py
terraform/: iam.tf  providers.tf  s3.tf  terraform.tfvars  variables.tf
tests/config_loader/: yaml_test.py
tests/config_loader/config_files/dev/: preprocessing.yaml  shared_config.yaml
tests/steps/: data_locations_test.py  framework_processing_step_test.py  path_factory_tests.py
