[tool.poetry]
name = "sm-pipelines-oo"
version = "0.0.1"
description = "Sagemaker Pipelines OO"
authors = ["Thomas Loeber <thomas.loeber73@gmail.com>"]
license = "MIT"
packages = [{ include = "sm_pipelines_oo", from = "src" }]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry.dependencies]
# Upper limit is required for tensorflow to install.
python = ">=3.10, <3.12"
pandas = "^2.0.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
loguru = "^0.7.0"
boto3 = "^1.26.158"
botocore = "^1.29.158"
pyarrow = "^12.0.1"
scikit-learn = "^1.2.2"
sagemaker = "^2.173.0"
pandera = {extras = ["mypy", "io"], version = "^0.17.2"}
awswrangler = "^3.4.2"
s3path = "^0.5.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.0"
pylint = "^2.17.4"
black = "^23.3.0"
pytest = "^7.3.2"
matplotlib = "^3.7.1"
ipykernel = "*"
nb-mypy = "^1.0.5"
boto3-stubs = {extras = ["essential", "sagemaker", "sagemaker-runtime", "sts"], version = "^1.34.2"}
types-pillow = "^10.1.0.2"
types-openpyxl = "^3.1.0.32"
types-requests = "^2.31.0.10"
pyarrow-stubs = "^10.0.1.7"
types-pyyaml = "^6.0.12.12"
pyyaml = "^6.0.1"
ipytest = "^0.14.0"

[tool.poetry.group.scala_kernel]
optional = true
[tool.poetry.group.scala_kernel.dependencies]
spylon-kernel = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
