[tool.poetry]
name = "sm-pipelines-oo"
version = "0.0.1"
description = "Sagemaker Pipelines OO"
authors = ["Thomas Loeber <thomas.loeber73@gmail.com>"]
license = "MIT"
packages = [{ include = "sm_pipelines_oo", from = "src" }]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pandas = "^2.0.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
loguru = "^0.7.0"
boto3 = "^1.26.158"
botocore = "^1.29.158"
scikit-learn = "^1.2.2"
sagemaker = "^2.173.0"
pandera = {extras = ["mypy", "io"], version = "^0.17.2"}
awswrangler = "^3.4.2"
s3path = "^0.5.2"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.0"
pylint = "^2.17.4"
black = "^23.3.0"
pytest = "^7.3.2"
matplotlib = "^3.7.1"
ipykernel = "*"
nb-mypy = "^1.0.5"
boto3-stubs = {extras = ["essential", "sagemaker", "sagemaker-runtime", "sts"], version = "^1.34.2"}
types-pillow = "^10.1.0.2"
types-openpyxl = "^3.1.0.32"
types-requests = "^2.31.0.10"
types-pyyaml = "^6.0.12.12"
ipytest = "^0.14.0"
types-pygments = "^2.17.0.20240106"
types-beautifulsoup4 = "^4.12.0.20240229"
types-colorama = "^0.4.15.20240205"
types-decorator = "^5.1.8.20240106"
types-jsonschema = "^4.21.0.20240118"
types-protobuf = "^4.24.0.20240302"
types-python-dateutil = "^2.8.19.20240106"
types-six = "^1.16.21.20240301"
mypy-boto3-sagemaker = "^1.34.98"
mypy-boto3-sagemaker-runtime = "^1.34.0"
mypy-boto3-s3 = "^1.34.91"
mypy-boto3-sts = "^1.34.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
