[tool.poetry]
name = "sm-pipelines-oo-examples"
version = "0.0.1"
description = "Sagemaker Pipelines OO Examples"
authors = ["Thomas Loeber <thomas.loeber73@gmail.com>"]
license = "MIT"
packages = [{ include = "smp_oo_examples", from = "src" }]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
sm-pipelines-oo = { path = "..", develop = true }  # *Editable* install of our main package

# Need to explicitly specify dev packages for library in examples package again (they are not passed through from dependency)
[tool.poetry.group.dev.dependencies]
mypy = "^1.4.0"
pylint = "^2.17.4"
black = "^23.3.0"
pytest = "^7.3.2"
behave = "^1.2.6"
matplotlib = "^3.7.1"
ipykernel = "*"
nb-mypy = "^1.0.5"
ipytest = "^0.14.0"
boto3-stubs = {extras = ["essential", "sagemaker", "sagemaker-runtime", "sts"], version = "^1.34.2"}
types-pillow = "^10.1.0.2"
types-openpyxl = "^3.1.0.32"
types-requests = "^2.31.0.10"
pyarrow-stubs = "^10.0.1.7"
types-pyyaml = "^6.0.12.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
